--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,10 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    // retrofit Dependencies
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // converte o json desde que tenhamos uma classe para o mesmo
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'io.coil-kt:coil-compose:2.3.0'
 }
