--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LionSchool"
         tools:targetApi="31">
+        <activity
+            android:name=".StudentsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_students"
+            android:theme="@style/Theme.LionSchool" />
         <activity
             android:name=".HomeActivity"
             android:exported="false"
