--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.LionSchool"
         tools:targetApi="31">
         <activity
+            android:name=".StudentActivity"
+            android:exported="false"
+            android:label="@string/title_activity_student"
+            android:theme="@style/Theme.LionSchool" />
+        <activity
             android:name=".StudentsActivity"
             android:exported="false"
             android:label="@string/title_activity_students"
